...
                .defaultMinSize(minHeight = 48.dp)
                .testTag("input_text_field") // for testing purposes
        )
        Spacer(modifier = Modifier.width(30.dp))
        FloatingActionButton(
            modifier = Modifier
                .testTag("addEditFab"),
            onClick = { /*doSmth()*/ },
            shape = CircleShape,
        ) {
            Log.d("InputField", "FAB for adding something clicked")
            Icon(Icons.Filled.Add, contentDescription = "Add/edit")
        }
    }
}

